Header and Footer font sizes and spacing fixed

--- a/sass/dxa.scss
+++ b/sass/dxa.scss
@@ -90,7 +90,7 @@ h3 {
 /* Footer */
 footer {
     background: $secondary-blue;
-    font-size: 13px;
+    // font-size: 13px;
     font-weight: 300;
     color: $white;
 }
@@ -486,15 +486,15 @@ h3 {
 // ready container
 // footer
 footer {
-font-size: 1.8rem;
+// font-size: 1.8rem;
 }
 
 footer h3 {
-font-size: 3rem;
+// font-size: 3rem;
 }
 
 footer .social_icons, footer .copyright {
-font-size: 1.3rem;
+// font-size: 1.3rem;
 }
 
 footer a:hover {
